<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh"
          android:icon="@drawable/refresh"
          android:title="@string/refresh"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/renew"
          android:icon="@drawable/renew"
          android:title="@string/renew" 
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/search"
          android:icon="@drawable/search"
          android:title="@string/search"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/locations"
          android:icon="@drawable/locations"
          android:title="@string/locations"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/preferences"
          android:icon="@drawable/settings"
          android:title="@string/preferences"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/help"
          android:icon="@drawable/help"
          android:title="@string/help" 
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/about"
          android:icon="@drawable/about"
          android:title="@string/about" 
          android:showAsAction="ifRoom" />
</menu>