<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    style="HoebAppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	    style="@style/HoebAppTheme"
		android:layout_weight="1"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp">

	    <ViewSwitcher
	        android:id="@+id/searchArea"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:measureAllChildren="false">

	        <LinearLayout
	            android:id="@+id/simpleSearch"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >

	            <Button
	                android:id="@+id/switchToAdvancedSearchButton"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/switchToAdvancedSearchButton" />

	            <EditText
	                android:id="@+id/searchBox"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:hint="@string/searchHint"
	                android:imeOptions="actionSearch"
	                android:inputType="text" >

	                <requestFocus />
	            </EditText>

	            <Button
	                android:id="@+id/simpleSearchButton"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/searchButton" />
	        </LinearLayout>

	        <TableLayout
	            android:id="@+id/advancedSearch"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >

	            <TableRow>
	                <EditText
	                    android:id="@+id/searchBox1"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:hint="@string/searchHint"
	                    android:imeOptions="actionNext"
	                    android:inputType="text" />
	                <Spinner
	                    android:id="@+id/searchType1"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:spinnerMode="dropdown"
	                    android:entries="@array/searchcategorylabels" />
	            </TableRow>

	            <TableRow>
	                <EditText
	                    android:id="@+id/searchBox2"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:hint="@string/searchHint"
	                    android:imeOptions="actionNext"
	                    android:inputType="text" />
	                <Spinner
	                    android:id="@+id/searchType2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:spinnerMode="dropdown"
	                    android:entries="@array/searchcategorylabels" />
	            </TableRow>

	            <TableRow>
	                <EditText
	                    android:id="@+id/searchBox3"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:hint="@string/searchHint"
	                    android:imeOptions="actionSearch"
	                    android:inputType="text" />
	                <Spinner
	                    android:id="@+id/searchType3"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:spinnerMode="dropdown"
	                    android:entries="@array/searchcategorylabels" />
	            </TableRow>

               <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/switchToSimpleSearchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/switchToSimpleSearchButton" />

                    <Button
                        android:id="@+id/advancedSearchButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/searchButton" />

                </LinearLayout>
	        </TableLayout>	
	    </ViewSwitcher>

	    <ListView
	        android:id="@+id/searchResults"
	        android:layout_below="@id/searchArea"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    </ListView>

	</RelativeLayout>
	    
    <com.google.ads.AdView android:id="@+id/adView"
            		 android:layout_width="wrap_content"
    				 android:layout_height="wrap_content" 
    				 android:gravity="center"
                     ads:adUnitId="ca-app-pub-9064469114375841/3373064817"
                     ads:adSize="BANNER"
                     ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
                     ads:loadAdOnCreate="true"/>

</LinearLayout>